--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:network": "ng serve --host 0.0.0.0",
+    "start:localhost": "ng serve --host localhost",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
