--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "start:network": "ng serve --host 0.0.0.0",
-    "start:localhost": "ng serve --host localhost",
+    "start": "ng serve --proxy-config proxy.conf.json",
+    "start:network": "ng serve --host 0.0.0.0 --proxy-config proxy.conf.json",
+    "start:localhost": "ng serve --host localhost --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
