--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -88,7 +88,8 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/ngx-toastr/toastr.css"
             ]
           }
         }
