--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^24.5.2",
     "@types/supertest": "^6.0.3",
     "cross-env": "^10.1.0",
+    "dotenv-cli": "^10.0.0",
     "drizzle-kit": "^0.31.4",
     "jest": "^30.2.0",
     "supertest": "^7.1.4",
