--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "start:localhost": "ng serve --host localhost --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "cross-env NODE_ENV=test dotenv -e .env.test jest"
   },
   "prettier": {
     "printWidth": 100,
