feat: add backend migration step to CI workflow and remove migration from Jest setup

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,10 @@ jobs:
         working-directory: ./backend
         run: npm install
 
+      - name: Apply backend migrations
+        working-directory: ./backend
+        run: npx drizzle-kit migrate
+
       - name: Run backend unit tests
         working-directory: ./backend
         run: npm test
