feat: set DATABASE_URL to in-memory for backend migrations in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
 
       - name: Apply backend migrations
         working-directory: ./backend
+        env:
+          DATABASE_URL: ":memory:"
         run: npx drizzle-kit migrate
 
       - name: Run backend unit tests
