--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,13 +24,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.3.1",
-    "@angular/common": "^20.3.0",
-    "@angular/compiler": "^20.3.0",
-    "@angular/core": "^20.3.0",
-    "@angular/forms": "^20.3.0",
-    "@angular/platform-browser": "^20.3.0",
-    "@angular/router": "^20.3.0",
+    "@angular/animations": "20.3.6",
+    "@angular/common": "20.3.6",
+    "@angular/compiler": "20.3.6",
+    "@angular/core": "20.3.6",
+    "@angular/forms": "20.3.6",
+    "@angular/platform-browser": "20.3.6",
+    "@angular/router": "20.3.6",
     "@tailwindcss/postcss": "^4.1.13",
     "ngx-toastr": "^19.1.0",
     "postcss": "^8.5.6",
@@ -40,10 +40,10 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.3.6",
-    "@angular/build": "^20.3.2",
-    "@angular/cli": "^20.3.2",
-    "@angular/compiler-cli": "^20.3.0",
+    "@angular-devkit/build-angular": "20.3.6",
+    "@angular/build": "20.3.6",
+    "@angular/cli": "20.3.6",
+    "@angular/compiler-cli": "20.3.6",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
