--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "cross-env": "^7.0.3",
+    "dotenv-cli": "^6.1.0"
   }
 }
