--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "start:localhost": "ng serve --host localhost --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "cross-env NODE_ENV=test dotenv -e .env.test jest"
+    "test": "ng test"
   },
   "prettier": {
     "printWidth": 100,
@@ -45,14 +45,14 @@
     "@angular/cli": "20.3.6",
     "@angular/compiler-cli": "20.3.6",
     "@types/jasmine": "~5.1.0",
+    "cross-env": "^7.0.3",
+    "dotenv-cli": "^7.3.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.9.2",
-    "cross-env": "^7.0.3",
-    "dotenv-cli": "^7.3.0"
+    "typescript": "~5.9.2"
   }
 }
