--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - backend-node-modules:/app/node_modules
     environment:
       - NODE_ENV=development
+      - HOST=0.0.0.0
       - PORT=5000
       - DATABASE_URL=/app/src/db/jejak-buku-test.db
     restart: unless-stopped
