--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -18,4 +18,4 @@ RUN echo '#!/bin/bash' > /entrypoint.sh && \
     chmod +x /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
-CMD ["npm", "start"]
+CMD ["npm", "run", "start:network"]
