fix: Update vercel.json to use new configuration format
- Replace 'routes' with 'rewrites' (new Vercel config format)
- Remove 'version: 2' (deprecated)
- Add 'git.deploymentEnabled' config for branch control
- Move cache headers to headers section
- Fixes: Mixed routing properties error (MIXED_ROUTING_PROPERTIES)

--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,23 @@
 {
-  "version": 2,
   "buildCommand": "cd frontend && npm ci --legacy-peer-deps && npm run build",
   "outputDirectory": "frontend/dist/frontend/browser",
   "framework": null,
-  "routes": [
+  "rewrites": [
     {
-      "src": "/assets/(.*)",
-      "headers": {
-        "cache-control": "public, max-age=31536000, immutable"
-      }
-    },
-    {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
     {
       "source": "/(.*)",
       "headers": [
@@ -36,5 +35,12 @@
         }
       ]
     }
-  ]
+  ],
+  "git": {
+    "deploymentEnabled": {
+      "demo": true,
+      "development": false,
+      "master": false
+    }
+  }
 }
