fix: Add Vercel branch restriction and fix build command
- Add ignoreCommand to skip builds on non-demo branches
- Add installCommand to skip root npm install
- Keep buildCommand with 'cd frontend' since Vercel starts at repo root
- Only demo branch will trigger actual builds
- Development branch builds will be skipped automatically

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
   "buildCommand": "cd frontend && npm ci --legacy-peer-deps && npm run build",
   "outputDirectory": "frontend/dist/frontend/browser",
+  "installCommand": "echo 'Skipping root install'",
+  "ignoreCommand": "bash -c 'if [ \"$VERCEL_GIT_COMMIT_REF\" != \"demo\" ]; then echo \"Skipping build for branch $VERCEL_GIT_COMMIT_REF\" && exit 0; else exit 1; fi'",
   "framework": null,
   "rewrites": [
     {
