--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd frontend && npm ci --legacy-peer-deps && npm run build",
+  "buildCommand": "if [ -d frontend ]; then cd frontend && npm ci --legacy-peer-deps && npm run build; else npm ci --legacy-peer-deps && npm run build; fi",
   "outputDirectory": "frontend/dist/frontend/browser",
   "installCommand": "echo 'Skipping root install'",
   "ignoreCommand": "bash -c 'if [ \"$VERCEL_GIT_COMMIT_REF\" != \"demo\" ]; then echo \"Skipping build for branch $VERCEL_GIT_COMMIT_REF\" && exit 0; else exit 1; fi'",
