--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
-  "buildCommand": "cd frontend && npm ci --legacy-peer-deps && npm run build",
-  "outputDirectory": "frontend/dist/frontend/browser",
-  "installCommand": "echo 'Skipping root install'",
-  "ignoreCommand": "bash -c 'if [ \"$VERCEL_GIT_COMMIT_REF\" != \"demo\" ]; then echo \"Skipping build for branch $VERCEL_GIT_COMMIT_REF\" && exit 0; else exit 1; fi'",
+  "buildCommand": "npm ci --legacy-peer-deps && npm run build",
+  "outputDirectory": "dist/frontend/browser",
+  "installCommand": "npm ci --legacy-peer-deps",
+  "ignoreCommand": "bash -c 'exit 1'",
   "framework": null,
+  "rootDirectory": "frontend",
   "rewrites": [
     {
       "source": "/(.*)",
