--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
-  "buildCommand": "npm ci --legacy-peer-deps && npm run build",
-  "outputDirectory": "dist/frontend/browser",
-  "installCommand": "npm ci --legacy-peer-deps",
+  "buildCommand": "if [ -d \"frontend\" ]; then cd frontend; fi && npm ci --legacy-peer-deps && npm run build",
+  "outputDirectory": "frontend/dist/frontend/browser",
+  "installCommand": "echo 'Skipping root install'",
   "ignoreCommand": "bash -c 'exit 1'",
   "framework": null,
-  "rootDirectory": "frontend",
   "rewrites": [
     {
       "source": "/(.*)",
