--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm ci --legacy-peer-deps --prefix frontend && npm run build --prefix frontend",
+  "buildCommand": "npm install --legacy-peer-deps --prefix frontend && npm run build --prefix frontend",
   "outputDirectory": "frontend/dist/frontend/browser",
   "installCommand": "echo 'Skipping root install'",
   "ignoreCommand": "bash -c 'exit 1'",
