debug: Add ls to see working directory contents

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd ./frontend && npm install --legacy-peer-deps && npm run build",
+  "buildCommand": "ls -la && cd frontend && npm install --legacy-peer-deps && npm run build",
   "outputDirectory": "frontend/dist/frontend/browser",
   "installCommand": "echo 'Skipping root install'",
   "ignoreCommand": "bash -c 'exit 1'",
